<resources>
    <string name="app_name">CryptMeThis</string>
    <string name="banner_ad_unit_id">ca-app-pub-1516623591331383/7548463754</string>
    <string name="encrypt_code">Entez le code de cryptage:</string>
    <string name="encrypt_text">Entrez le texte à crypter:</string>
    <string name="encrypted_text">Résultat:</string>
    <string name="encrypt_button">Crypter !</string>
    <string name="decrypt_button">Dérypter !</string>
    <string name="copy_button">Copier</string>
</resources>
